@@ -49,11 +49,10 @@ class T(unittest.TestCase):
         '''various error conditions.'''
 
         pr = problem_report.ProblemReport()
-        self.assertRaises(AssertionError, pr.__setitem__, 'a b', '1')
-        self.assertRaises(AssertionError, pr.__setitem__, 'a', 1)
-        self.assertRaises(AssertionError, pr.__setitem__, 'a', 1)
-        self.assertRaises(AssertionError, pr.__setitem__, 'a', (1,))
-        self.assertRaises(AssertionError, pr.__setitem__, 'a', ('/tmp/nonexistant', ''))
+        self.assertRaises(ValueError, pr.__setitem__, 'a b', '1')
+        self.assertRaises(TypeError, pr.__setitem__, 'a', 1)
+        self.assertRaises(TypeError, pr.__setitem__, 'a', (1,))
+        self.assertRaises(TypeError, pr.__setitem__, 'a', ('/tmp/nonexistant', ''))
         self.assertRaises(KeyError, pr.__getitem__, 'Nonexistant')
 
     def test_compressed_values(self):
