@@ -7,6 +7,8 @@ detailed list of changes, please see ChangeLog.
  * hookutils.py: Fix generation of valid report key names from arbitrary paths
    in attach_file() and related functions. This will now replace all invalid
    characters with dots, not just a few known invalid ones. (LP: #1566975)
+ * problem_report.py: Instead of AssertionError, raise a ValueError for invalid
+   key names and TypeError for invalid kinds of values. Thanks Barry Warsaw.
 
 2.20.1 (2016-03-31)
 -------------------
